# slamdunk

./: .clang-format  .gitignore  CMakeLists.txt  main.cc
intro/: CMakeLists.txt  coordinate_transform.cc  coordinate_transform.h  hello_slam.cc  hello_slam.h  intro_eigen.cc  intro_eigen.h
math/: CMakeLists.txt  rodrigues.cc  rodrigues.h
visualize/: CMakeLists.txt  plot_trajectory.cpp  plot_trajectory.hpp  visualize_geometry.cc  visualize_geometry.h
